refactor(frontend/rust/webapp): use a more memory efficient zip lib
JSZip was using too many big buffers to store the final zip file. zip.js
is more efficient with buffer allocations

--- a/frontends/concrete-rust/webapp/index.html
+++ b/frontends/concrete-rust/webapp/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Chunked Keyset Generator</title>
     <link rel="stylesheet" href="style.css">
-    <!-- this file comes from https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js-->
-    <script src="jszip.min.js"></script>
+    <!-- this file comes from https://github.com/gildas-lormeau/zip.js/releases v2.7.60 -->
+    <script src="zip-full.min.js"></script>
     <script src="keygen.js"></script>
 </head>
 
