refactor(frontend/rust): use Zama theme in webapp

--- a/frontends/concrete-rust/concrete-keygen/webapp/index.html
+++ b/frontends/concrete-rust/concrete-keygen/webapp/index.html
@@ -16,10 +16,10 @@
         Bootstrapping keys are generated in chunks so that we
         don't go beyond Wasm memory limit.</p>
     <form id="keygen-form">
-        <label for="keyset-file">Upload Concrete Keyset Info File:</label>
+        <label for="keyset-file">Upload Concrete Keyset Info File</label>
         <input type="file" id="keyset-file" required>
         <br>
-        <label for="chunk-size">Chunk Size:</label>
+        <label for="chunk-size">Chunk Size</label>
         <input type="number" value="8" id="chunk-size" min="1" required>
         <br>
         <button type="submit">Generate Keyset</button>
